# oss-metrics-kit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: API_REFERENCE.md  BOOSTBIT_PLAYBOOK.template.md  BOOSTBIT_QUICKSTART.md  INTEGRATION.md  LLM_RULES.md  README.md  RELEASING.md  dev.md  getting-started.md  usage.md
examples/: README.md
plugins/: README.md
src/oss_metrics_kit/: __init__.py
src/ossmk/: __init__.py
src/ossmk/cli/: __init__.py
src/ossmk/config/: __init__.py
src/ossmk/core/models/: __init__.py
src/ossmk/core/rules/: __init__.py  llm.py
src/ossmk/core/services/: __init__.py  analyze.py  score.py
src/ossmk/exporters/: __init__.py  json.py  parquet.py  stdout.py
src/ossmk/metrics/: __init__.py
src/ossmk/normalization/: __init__.py
src/ossmk/providers/: __init__.py
src/ossmk/providers/github/: __init__.py  client.py
src/ossmk/security/: fastapi.py  ratelimit.py  ratelimit_redis.py
src/ossmk/storage/: __init__.py  base.py  memory.py  postgres.py  sqlite.py
src/ossmk/utils/: __init__.py
tests/: test_imports.py
